# Daedalux

./: .dockerignore  .gitignore  .gitignore (copy)  CMakeLists.txt  Dockerfile  LICENSE  README.md  __clauses.tmp  __formula.tmp  __mapping.tmp  __printbool.tmp  __workingfile.tmp  __workingfile.tmp.cpp  fsm_graphvis  lexer.h  ltl2ba  main.cpp  main_cli.cpp  mdp.pml  mutant (copy).pml  mutant.pml  original (copy).pml  original.pml  output.pml  run_tests.py  sym_table_graphviz  sym_table_graphviz.dot
ast/: astNode.cpp  (+1 more)
src/: CMakeLists.txt  CTestTestfile.cmake  a.out  main.cpp  main_cli.cpp  test.cpp
src/algorithm/: algorithm.hpp  bisimulationChecker.cpp  elementStack.cpp  elementStack.hpp  explore.cpp  explore.hpp  fsmExplorer.cpp  fsmExplorer.hpp  ltlModelChecker.cpp  ltlModelChecker.hpp  reachabilityRelation.cpp  reachabilityRelation.hpp  traceGenerator.cpp  traceGenerator.hpp
src/algorithm/utils/: stateComparer.cpp  stateComparer.hpp  successorTreeComparison.hpp
src/algorithms/: elementStack.cpp  elementStack.hpp  explore.cpp  explore.hpp  reachabilityRelation.hpp
src/ast/expr/: binaryExpr.hpp
src/ast/stmnt/: flowStmnt.hpp  stmnt.hpp
src/automata/: astToFsm.cpp  astToFsm.hpp  fsm.cpp
src/cli/: modelchecking_subcommand.cpp  mutant_subcommand.cpp  mutant_subcommand.hpp  promela_loader.cpp  promela_loader.hpp
src/core/ast/stmnt/: stmnt.hpp
src/core/automata/: fsm.cpp
src/core/logic/: ltl.cpp  ltl.hpp
src/core/logic/specification/: transition_spec.hpp
src/core/semantic/: payload.cpp  semantic.hpp
src/core/semantic/variable/: argList.hpp  argVar.hpp  boolVar.cpp  boolVar.hpp  enumDef.hpp  enumVar.hpp  paramList.hpp  primitiveVar.hpp  queueVar.cpp  queueVar.hpp  scalarVar.hpp  scalarVarInt.hpp  stackVar.cpp  stackVar.hpp  structVar.hpp  utypeVar.hpp  variable.cpp  variable.hpp  variableDecorator.cpp  variableDecorator.hpp
src/core/semantic/variable/state/: composite.cpp  composite.hpp  compositeState.cpp  compositeState.hpp  initState.cpp  initState.hpp  state.cpp  state.hpp  stateDecorator.cpp  stateDecorator.hpp  stateVisitor.hpp  thread.cpp  thread.hpp
src/core/semantic/variable/transition/: compositeTransition.cpp  compositeTransition.hpp  rendezVousTransition.cpp  rendezVousTransition.hpp  threadTransition.cpp  threadTransition.hpp  transition.cpp  transition.hpp
src/core/symbol/: symTable.cpp  symTable.hpp  symbol.cpp  symbol.hpp
src/feature/semantic/variable/state/: featuredStateDecorator.cpp  featuredStateDecorator.hpp
src/feature/semantic/variable/transition/: featuredTransition.cpp
src/features/: ADDutils.hpp  expToADD.cpp
src/formulas/: formula.hpp  formulaCreator.cpp  formulaCreator.hpp  formulaUtility.cpp  formulaUtility.hpp  transition_spec.hpp
src/libs/cudd/: Makefile.in  aclocal.m4  configure  install.sh
src/libs/cudd/cplusplus/.deps/: cplusplus_libobj_la-cuddObj.Plo
src/libs/cudd/cudd/.deps/: cudd_libcudd_la-cuddAPI.Plo  cudd_libcudd_la-cuddAddAbs.Plo  cudd_libcudd_la-cuddAddApply.Plo  cudd_libcudd_la-cuddAddFind.Plo  cudd_libcudd_la-cuddAddInv.Plo  cudd_libcudd_la-cuddAddIte.Plo  cudd_libcudd_la-cuddAddNeg.Plo  cudd_libcudd_la-cuddAddWalsh.Plo  cudd_libcudd_la-cuddAndAbs.Plo  cudd_libcudd_la-cuddAnneal.Plo  cudd_libcudd_la-cuddApa.Plo  (+50 more)
src/libs/ltl2ba/: .gitignore  CMakeLists.txt  install.sh
src/logic/: ltl.cpp  ltl.hpp
src/mutants/: mutantAnalyzer.cpp  mutantAnalyzer.hpp
src/parser/: lex.yy.cpp  y.tab.hpp
src/promela/ast/expr/: unaryExpr.hpp  varExpr.cpp
src/promela/ast/stmnt/: chanStmnt.hpp  clockStmnt.hpp  decl.cpp  decl.hpp  logicDecl.hpp
src/promela/parser/: promela_loader.cpp  promela_loader.hpp
src/promela/semantic/variable/: boolVariable.cpp  boolVariable.hpp  channel.cpp  channel.hpp  channelVar.cpp  channelVar.hpp  mtypeVar.cpp  mtypeVar.hpp  mtypeVariable.cpp  mtypeVariable.hpp  pidVar.cpp  pidVar.hpp  primitiveVariable.cpp  primitiveVariable.hpp  utypeVariable.cpp  utypeVariable.hpp
src/promela/symbol/typedef/: mtypedefSymNode.cpp  mtypedefSymNode.hpp
src/promela/symbol/vardef/: mtypeSymNode.cpp  varSymNode.cpp
src/semantic/: compositeState.cpp  compositeTransition.hpp  deleteTransVisitor.cpp  deleteTransVisitor.hpp  featuredStateDecorator.cpp  featuredStateDecorator.hpp  initState.cpp  never.cpp  neverTransition.cpp  payload.cpp  payload.hpp  process.cpp  processTransition.cpp  processTransition.hpp  programState.cpp  programState.hpp  rendezVousTransition.cpp  rendezVousTransition.hpp  state.hpp  stateDecorator.hpp  thread.cpp  thread.hpp  transition.hpp  transitionVisitor.hpp
src/semantic/variable/: boolVariable.cpp  boolVariable.hpp  channel.cpp  primitiveVariable.cpp  utypeVariable.cpp  utypeVariable.hpp  variable.cpp  variable.hpp  variable.hpp.old  variableDecorator.cpp
src/visualizer/: stateToGraphViz.cpp  stateToGraphViz.hpp  trace.cpp  trace.hpp  traceReport.cpp  traceReport.hpp
src/visualizers/: trace.cpp  trace.hpp  traceReport.cpp  traceReport.hpp
tests/: CMakeLists.txt  CTestTestfile.cmake  TestFilesUtils.hpp  test_ADDutils.cpp  test_elementStack.cpp  test_fsm.cpp  test_fsmEdge.cpp  test_fsmNode.cpp  test_ltl_creator.cpp  test_main.cpp  test_promela_loader.cpp  test_specification_writer.cpp  test_state.cpp  test_suite[1]_include.cmake  test_suite[1]_tests.cmake  test_symbol_table.cpp  test_transition.cpp
tests/formulas/: test_formula.cpp  test_formula_creator.cpp  test_ltl_creator.cpp  test_spinRunner.cpp
tests/integration_tests/: test_bisimulation.cpp  test_dfs.cpp  test_formula_creator.cpp  test_icse_test.cpp  test_ltlmodelChecker.cpp  test_most_similar_trans.cpp  test_mutant_handling.cpp  test_mutantgeneration.cpp  test_trace_generator.cpp
tests/semantic/: test_apply.cpp  test_deep_copy_state.cpp  test_executables.cpp  test_init_state.cpp  test_post.cpp  test_similar.cpp  test_variable_builder.cpp
tests/symbols/: test_bitSymNode.cpp  test_intSymNode.cpp  test_symTable.cpp  test_symbol.cpp  test_temporalSymNode.cpp  test_varSymNode.cpp
tests/test_files/basic/: chan_simple.pml
tests/vizualizers/: test_stateToGraphViz.cpp  test_trace.cpp  test_traceReport.cpp
(+281 files in other folders)
